public_html/layout/nouveau/style.css
/* ... */
.moderation-cc-item {
float:left;
text-align:center;
}

.nowrap {
white-space:nowrap;
}

.profile-col1 {
width:14.80em;
float:left;
padding-left:1em;
margin-bottom:1em;
}

.profile-image {
background:#f2f2f2 50% 50%;
border:1px solid #ccc;
padding:5px;
margin:0;
width:170px;
}

.profile-meta ul {
list-style-type:none;
margin:0 auto;
padding:5px 10px;
width:170px;
}

.profile-meta ul li {
float:left;
padding:5px;
}
.profile-bio {
background:#f2f2f2;
border:1px solid #ccc;
padding:5px;
margin:0;
width:170px;
clear:left;
}

.profile-bio p {
padding-top:5px;
}

.profile-col2 {
margin-left:17.8em;
}
.profile-col2 ul {
margin:0 .5em 1em;
}

.profile-header {
background:#ccc;
padding:.5em 1em;
margin:1em 0;
font-weight:bold;
}

.profile-header span {
float:right;
font-weight:normal;
}

.profile-header span a {
text-decoration:none;
}

.profile-data {
padding:0 .5em;
width:100%; /*width:auto in css/ie6.css file */
}

.searchauth {
background:transparent;
color:#000;
text-align:left;
}

.searchform-box {
background:#E7E7E7;
text-align:right;
border-bottom:1px solid #CCC;
height:52px;
margin:0;
padding:0 4px 0 1px;
}

.searchform-elements {
display:inline;
position:relative;
top:6px;
}

.stats-list-count {
padding-left:5px;
padding-right:5px;
text-align:right;
}

.stats-header-title {
padding-left:5px;
padding-right:5px;
text-align:left;
width:90%;
}

.stats-header-count {
padding-left:5px;
padding-right:5px;
text-align:left;
width:10%;
}

.stats-header-title-narrow {
padding-left:5px;
padding-right:5px;
text-align:left;
width:60%;
}

.stats-header-count-wide {
padding-left:5px;
padding-right:5px;
text-align:right;
width:40%;
}

.story {
background:transparent;
color:#000;
margin-bottom:30px;
}

.story h1 {
background:transparent;
color:#000;
font-size:1.4em;
font-weight:700;
margin:0 5px 0 0;
}

.story-body {
margin-bottom:10px;
padding:3px;
}

.story-body ul {
list-style-position:outside;
margin-left:5px;
padding-left:15px;
list-style:disc;
vertical-align:middle;
}

.story-featured {
background:transparent;
color:#000;
margin-bottom:10px;
margin-top:10px;
}

.story-featured h1 {
background:transparent;
color:#000;
font-size:1.8em;
font-weight:700;
margin:0 5px 0 0;
}

.story-footer {
color:#666;
font-size:.85em;
text-align:center;
padding:3px;
clear:both;
}

.story-icons {
color:#666;
float:right;
font-size:.85em;
text-align:right;
}

.story-icons a {
margin-left:5px;
}

.story-information {
background:transparent;
color:#666;
font-size:.85em;
padding:0 3px;
}

.sysmessage {
padding-bottom:10px;
}

.sysmessage img {
border:none;
float:left;
margin-right:10px;
vertical-align:middle;
}

.glf-warning {
background:transparent;
color:red;
font-weight:700;
}

.glf-warning-small {
background:transparent;
color:red;
}

.welcomeanddate-text {
border-bottom:1px solid #CCC;
margin-top:-3px;
margin-bottom:10px;
padding:0 0 7px;
}

.plugin {
background:#EFEFEF;
border:1px solid #CCC;
color:#000;
font-weight:400;
}

.plugin th {
background:#B7C1DC;
color:#000;
text-align:left;
padding:5px;
}

.plugin td {
padding:2px 5px;
}

.pluginBG {
background:#4D77CC;
color:#FEFEFE;
}

.pluginAltBG {
background:#4D77CC;
}

.pluginCellTitle {
background:#4D77CC;
color:#FFF;
font-weight:700;
padding:5px;
}

.pluginCellFill {
background:#F8FAFD;
}

.pluginCellText {
color:#636363;
font-weight:400;
}

.pluginHeader {
color:#204275;
font-weight:bolder;
padding:3px 0;
}

.pluginFooter,.pluginFooter td {
background:#4D77CC;
color:#FFF;
}

.pluginAlert {
background:#4D77CC;
color:#FFF;
font-weight:700;
padding:5px 15px;
}

.pluginInfo {
background:#4D77CC;
color:#FFF;
font-weight:400;
padding:5px 15px;
}

.pluginSubTable {
background:#CCC;
border:1px solid #CCC;
color:#000;
font-weight:400;
}

.pluginSubTable th {
background:#C9D1E4;
color:#000;
text-align:left;
padding:5px;
}

.pluginSolidOutline {
background:#CCC;
}

.pluginSolidFill {
background:#1A3955;
}

.pluginTitle {
background:#4D77CC;
color:#FFF;
padding:4px 6px;
}

.pluginCellSubTitle {
background:#F7F7F7;
color:#000;
padding:4px 6px;
}

.pluginTinyText {
font-size:.8em;
}

.pluginMediumText {
font-size:1em;
}

.pluginLargeText {
font-size:1.25em;
}

.pluginRow2,.pluginRow2 td {
background:#F1F5FA;
color:#000;
line-height:120%;
}

.pluginRow1 .pluginRollOver,.pluginRow2 .pluginRollOver,.pluginRollOver {
background:#E7E7E7;
color:#000;
line-height:120%;
}

.pluginLinks A:hover {
color:#000;
font-style:normal;
font-weight:400;
text-decoration:underline;
}

a.pluginButton:link,a.pluginButton:visited {
background:transparent url(layout/nouveau/navbar/images/button_over.gif) center repeat-x;
color:#000;
display:block;
height:19px;
padding-top:2px;
text-align:center;
text-decoration:none;
}

a.pluginButton:hover {
background:transparent url(layout/nouveau/navbar/images/button_over.gif) center repeat-x;
color:blue;
display:block;
height:19px;
padding-top:2px;
text-align:center;
text-decoration:none;
}

a.tooltip {
color:#000;
position:relative;
text-decoration:none;
z-index:10;
}

a.tooltip:hover {
text-decoration:none;
z-index:100;
}

a.tooltip:hover span {
background-color:#E5EFFF;
border:1px solid #C8DAF7;
color:#033666;
display:block;
font-size:.8em;
font-style:normal;
left:-20px;
line-height:125%;
min-width:150px;
position:absolute;
text-align:left;
text-decoration:none;
top:10px;
z-index:100;
padding:4px;
}

.poll-vote,.poll-vote-results {
background:transparent;
color:#000;
font-size:smaller;
}

#navcontainer {
background:transparent;
border-bottom:1px solid #CCC;
float:left;
font-size:93%;
line-height:normal;
width:100%;
}

#navcontainer a {
background:url(layout/nouveau/navbar/images/tableftJ.gif) no-repeat left top;
float:left;
text-decoration:none;
margin:0;
padding:0 0 0 5px;
color:#4D77CC;
}

#navcontainer a span {
background:url(layout/nouveau/navbar/images/tabrightJ.gif) no-repeat right top;
display:block;
float:none;
padding:5px 15px 4px 6px;
}

#navcontainer a:hover span {
color:#FFF;
background-position:100% -42px;
}
/* ... */

